--- a/eShop.Web.Modules/eShop.Web.CustomerPortal/eShop.Web.CustomerPortal.csproj
+++ b/eShop.Web.Modules/eShop.Web.CustomerPortal/eShop.Web.CustomerPortal.csproj
@@ -7,6 +7,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.10" />
   </ItemGroup>
